--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
             <h1>header</h1>
         </section>
     </header>
+
+    <main>
+        <h1>main</h1>
+    </main>
 </body>
 </html>
